# src/routes/auth.router.js
@@ -4,5 +4,11 @@ const { restrict } = require('../middlewares/auth.middlewares');
 
 router.post('/login', authController.login);
 router.get('/me', restrict, authController.me);
+router.post('/forgot-password', authController.forgotPassword);
+router.get('/reset-password', (req, res) => {
+    let { token, error } = req.query;
+    return res.render('reset-password', { token, error });
+});
+router.post('/reset-password', authController.resetPassword);
 
 module.exports = router;
